@@ -224,5 +224,5 @@ def augment_test_func(test_func):
 
 
 # Create test functions that can interact with PyTest
-for _test_func in tools.create_tests(setup_experiment, __file__):
+for _test_func in tools.create_tests(setup_experiment, __file__, time_limit=4):
     globals()[_test_func.__name__] = augment_test_func(_test_func)
