@@ -48,7 +48,7 @@ CMD_LINE_VARIANTS=
 
 # Default versions of Hydrogen, DiHydrogen, and Aluminum - use head of repo
 HYDROGEN_VER="@develop"
-ALUMINUM_VER="@1.3.1:"
+ALUMINUM_VER="@master"
 #ALUMINUM_VER="@1.0.0-lbann"
 DIHYDROGEN_VER="@develop"
 # Default variants for Conduit to minimize dependencies
